# perturbation_testing_tutorial

./: .gitignore  README.md  check_dale_rank.py  check_interarea_rank.py  make_svd_grid.py  perturbation_testing.py  pyproject.toml  run_baselines.sh  run_experiment.sh  train_rnn.py
data/: allen_to_tensor.py  dataloader.py
data/cache/dataloader/: perturb_sess=829720705_dt=0.01_dur=1.5_pre=0.5_buf=0.1_areas=VISp-VISrl-VISl-VISal-VISpm-VISam_sham=1_srt=1.npz
figure_experiments/: make_barplots.py  make_cosine_bars.py  metrics_summary.csv  perturbation_metrics.csv
models/: initialize_signed_weight_matrices.py  rnn_and_spiking_rnn.py
notebooks/: data_explorations.ipynb
papers/: perturbation_testing.tex
utils/: functions.py  plot_rasters.py
